--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
         </div>
         <div class="text-center mt-4 text-muted">
-            &copy; telvinvarghese
+            &copy; Suyash_Srivastava
         </div>
     </div>
 
